Vehicle insurance donde

--- a/Datasets_Analysis/car_insurance.ipynb
+++ b/Datasets_Analysis/car_insurance.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +73,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
+    "# Deleting index form dataset so we don't compromise the predictions\n",
     "train = pd.read_csv('../res/train.csv')\n",
     "x = train.iloc[:, 1:-1] # Training Dataset without dependient variable and index (pandas index = dataset index - 1)\n",
     "y = train.iloc[:, -1] # Training Dependient variable\n",
@@ -774,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -927,6 +928,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Variables para guardar los valores de precisión de los modelos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 128,
    "metadata": {},
@@ -954,13 +962,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "logmodel = LogisticRegression(solver='lbfgs', max_iter=200) # Logistic Regression\n",
     "logmodel.fit(x_train, y_train) # Training...\n",
-    "predictions_logmodel = logmodel.predict(x_test) # Prdictions over test set"
+    "predictions_logmodel = logmodel.predict(x_test) # Predictions over test set"
    ]
   },
   {
@@ -1578,34 +1586,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 80,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "final_pred = logmodel.predict(test_final) # Prdictions over test set\n",
-    "test_final['Response'] = final_pred\n"
+    "#### Realizamos la predicción"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_final['id'] = test_final.index + 1\n",
-    "test_final = test_final[['id', 'Response']].copy()"
+    "final_pred = logmodel.predict(test_final) # Predictions over test set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Importamos de nuevo el dataset para devolver los resultados con el formato de entrada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_final = pd.read_csv('../res/test_final.csv')\n",
+    "test_final['Response'] = final_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>Response</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>127032</th>\n      <td>127033</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>127033</th>\n      <td>127034</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>127034</th>\n      <td>127035</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>127035</th>\n      <td>127036</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>127036</th>\n      <td>127037</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>127037 rows × 2 columns</p>\n</div>",
-      "text/plain": "            id  Response\n0            1         0\n1            2         0\n2            3         0\n3            4         0\n4            5         0\n...        ...       ...\n127032  127033         0\n127033  127034         0\n127034  127035         0\n127035  127036         0\n127036  127037         0\n\n[127037 rows x 2 columns]"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>Gender</th>\n      <th>Age</th>\n      <th>Driving_License</th>\n      <th>Region_Code</th>\n      <th>Previously_Insured</th>\n      <th>Vehicle_Age</th>\n      <th>Vehicle_Damage</th>\n      <th>Annual_Premium</th>\n      <th>Policy_Sales_Channel</th>\n      <th>Vintage</th>\n      <th>Response</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>381110</td>\n      <td>Male</td>\n      <td>25</td>\n      <td>1</td>\n      <td>11.0</td>\n      <td>1</td>\n      <td>&lt; 1 Year</td>\n      <td>No</td>\n      <td>35786.0</td>\n      <td>152.0</td>\n      <td>53</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>381111</td>\n      <td>Male</td>\n      <td>40</td>\n      <td>1</td>\n      <td>28.0</td>\n      <td>0</td>\n      <td>1-2 Year</td>\n      <td>Yes</td>\n      <td>33762.0</td>\n      <td>7.0</td>\n      <td>111</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>381112</td>\n      <td>Male</td>\n      <td>47</td>\n      <td>1</td>\n      <td>28.0</td>\n      <td>0</td>\n      <td>1-2 Year</td>\n      <td>Yes</td>\n      <td>40050.0</td>\n      <td>124.0</td>\n      <td>199</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>381113</td>\n      <td>Male</td>\n      <td>24</td>\n      <td>1</td>\n      <td>27.0</td>\n      <td>1</td>\n      <td>&lt; 1 Year</td>\n      <td>Yes</td>\n      <td>37356.0</td>\n      <td>152.0</td>\n      <td>187</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>381114</td>\n      <td>Male</td>\n      <td>27</td>\n      <td>1</td>\n      <td>28.0</td>\n      <td>1</td>\n      <td>&lt; 1 Year</td>\n      <td>No</td>\n      <td>59097.0</td>\n      <td>152.0</td>\n      <td>297</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>127032</th>\n      <td>508142</td>\n      <td>Female</td>\n      <td>26</td>\n      <td>1</td>\n      <td>37.0</td>\n      <td>1</td>\n      <td>&lt; 1 Year</td>\n      <td>No</td>\n      <td>30867.0</td>\n      <td>152.0</td>\n      <td>56</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>127033</th>\n      <td>508143</td>\n      <td>Female</td>\n      <td>38</td>\n      <td>1</td>\n      <td>28.0</td>\n      <td>0</td>\n      <td>1-2 Year</td>\n      <td>Yes</td>\n      <td>28700.0</td>\n      <td>122.0</td>\n      <td>165</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>127034</th>\n      <td>508144</td>\n      <td>Male</td>\n      <td>21</td>\n      <td>1</td>\n      <td>46.0</td>\n      <td>1</td>\n      <td>&lt; 1 Year</td>\n      <td>No</td>\n      <td>29802.0</td>\n      <td>152.0</td>\n      <td>74</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>127035</th>\n      <td>508145</td>\n      <td>Male</td>\n      <td>71</td>\n      <td>1</td>\n      <td>28.0</td>\n      <td>1</td>\n      <td>1-2 Year</td>\n      <td>No</td>\n      <td>62875.0</td>\n      <td>26.0</td>\n      <td>265</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>127036</th>\n      <td>508146</td>\n      <td>Male</td>\n      <td>41</td>\n      <td>1</td>\n      <td>29.0</td>\n      <td>1</td>\n      <td>1-2 Year</td>\n      <td>No</td>\n      <td>27927.0</td>\n      <td>124.0</td>\n      <td>231</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>127037 rows × 12 columns</p>\n</div>",
+      "text/plain": "            id  Gender  Age  Driving_License  Region_Code  Previously_Insured  \\\n0       381110    Male   25                1         11.0                   1   \n1       381111    Male   40                1         28.0                   0   \n2       381112    Male   47                1         28.0                   0   \n3       381113    Male   24                1         27.0                   1   \n4       381114    Male   27                1         28.0                   1   \n...        ...     ...  ...              ...          ...                 ...   \n127032  508142  Female   26                1         37.0                   1   \n127033  508143  Female   38                1         28.0                   0   \n127034  508144    Male   21                1         46.0                   1   \n127035  508145    Male   71                1         28.0                   1   \n127036  508146    Male   41                1         29.0                   1   \n\n       Vehicle_Age Vehicle_Damage  Annual_Premium  Policy_Sales_Channel  \\\n0         < 1 Year             No         35786.0                 152.0   \n1         1-2 Year            Yes         33762.0                   7.0   \n2         1-2 Year            Yes         40050.0                 124.0   \n3         < 1 Year            Yes         37356.0                 152.0   \n4         < 1 Year             No         59097.0                 152.0   \n...            ...            ...             ...                   ...   \n127032    < 1 Year             No         30867.0                 152.0   \n127033    1-2 Year            Yes         28700.0                 122.0   \n127034    < 1 Year             No         29802.0                 152.0   \n127035    1-2 Year             No         62875.0                  26.0   \n127036    1-2 Year             No         27927.0                 124.0   \n\n        Vintage  Response  \n0            53         0  \n1           111         0  \n2           199         0  \n3           187         0  \n4           297         0  \n...         ...       ...  \n127032       56         0  \n127033      165         0  \n127034       74         0  \n127035      265         0  \n127036      231         0  \n\n[127037 rows x 12 columns]"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -1613,6 +1634,22 @@
    ],
    "source": [
     "display(test_final)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Guardamos el nuevo dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_final.to_csv('../res/predictions.csv', index = False)"
    ]
   }
  ],
