Vehicle insurance done, maths done

--- a/Math for AI/Ejercicios_evaluables.ipynb
+++ b/Math for AI/Ejercicios_evaluables.ipynb
@@ -1022,13 +1022,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicio 4"
+    "# Ejercicio 4\n",
+    "\n",
+    "Se dispone de tres cartas con las características siguientes:\n",
+    "- La primera carta es roja por ambos lados.\n",
+    "- La segunda carta es verde por ambos lados.\n",
+    "- La tercera carta es roja por un lado y verde por el otro lado.\n",
+    "\n",
+    "Se introducen las tres cartas en una bolsa, se barajan y se extrae una carta completamente al azar, poniéndola sobre la mesa sin mirar y observando posteriormente el lado que ha quedado visible, el cual ha resultado ser de color verde."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Apartado a) \n",
+    "### Intuitivamente, ¿cuál crees que es la probabilidad de que al girar la carta el otro lado resulte ser también verde?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si planteamos el enunciado como *\"Una vez sabido que tenemos una carta con un lado verde, ¿Cuál es la probabilidad de que el otro lado también sea verde?\"*. A priori parece ser claro que ya sabido que ya tenemos un lado verde, al darle la vuelta, o bien es verde (carta con los dos lados verdes), o bien es roja (carta con un lado verde y uno rojo). Esto nos da dos posibilidades y por tanto, un **50%** de probabilidad."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apartado b) \n",
+    "\n",
+    "### Realiza una simulación en Python para este problema, estimando la probabilidad tras realizar una cantidad elevada de simulaciones del problema. La función debería tener como parámetro de entrada el némero de simulaciones n y como parámetro de salida una estimación de la probabilidad p. Para simular la extracción de las cartas y del lado visible tras la extracción puedes valerte de random.randint. Recuerda que durante la simulación sólo deberán contabilizarse los experimentos en los que la cara visible de la carta obtenida ha sido verde y, sobre estos, estimar la proporción de veces en las que la carta de la que procede ha resultado ser la que es verde por ambas caras."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Realizaremos la simulación y estimaremos la probabilidad de sacar la carta con los dos lados verdes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media de 100 estimaciones:  0.6667403828939246\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "# 0 -> Rojo\n",
+    "# 1 -> Verde\n",
+    "\n",
+    "def estimar_probabilidar(iter = 1000):\n",
+    "    lado1_v = 0\n",
+    "    carta_vv = 0\n",
+    "    for _ in range(int(iter)):        \n",
+    "        carta = random.randint(0, 2)\n",
+    "        if carta == 0: # Carta roja y roja\n",
+    "            continue\n",
+    "            \n",
+    "        elif carta == 1: # Carta verde y verde\n",
+    "            carta_vv += 1\n",
+    "            lado1_v += 1\n",
+    "\n",
+    "        else: # Carta roja y verde\n",
+    "            lado1 = random.randint(0, 1)\n",
+    "            if lado1 == 1:\n",
+    "                lado1_v += 1\n",
+    "            else:\n",
+    "                continue\n",
+    "    return carta_vv / lado1_v\n",
+    "\n",
+    "estimations = np.array([])\n",
+    "for _ in range(100):\n",
+    "    estimations = np.append(estimar_probabilidar(10000), estimations)\n",
+    "\n",
+    "print(\"Media de 100 estimaciones: \", np.mean(estimations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observamos una probabilidad de 2/3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apartado c) \n",
+    "### ¿Son los resultados obtenidos consistentes con tu intuición inicial? De no ser el caso, ¿puedes conjeturar el valor correcto de la probabilidad? Una vez realizada, demuestra formalmente que el valor de la probabilidad conjeturada es el correcto y/o porporciona esquem áticamente la explicación de por qué se verifica."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Habíamos predicho un **50%** y hemos obtenido una probabilidad de un **66,66%**. \n",
+    "\n",
+    "El error se encuentra en no haber tenido en cuenta que la carta con dos caras verdes suponen dos elementos diferentes a tener en cuenta. Esto quiere decir que cuando obtenemos una cara verde en la primera extracción esto puede haber sido porque hemos extraido:\n",
+    "- Un lado de la carta verde\n",
+    "- El otro lado de la carta verde\n",
+    "- El lado verde de la carta roja y verde\n",
+    "\n",
+    "Como podemos ver, de estos tres casos, dos se deben a que la carta es verde por las dos caras. Esto nos lleva a una probabilidad de 2/3.\n",
+    "\n",
+    "Estudiemos formalmente la probabilidad condicionada de *\"Salir cara 2 verde\"* dado que se cumple *\"Cara 1 es verde\"*:\n",
+    "\n",
+    "P(cara 2 verde | cara 1 verde) = P(cara 1 y 2 verde) / P(cara 1 verde) = $\\dfrac{\\dfrac{1}{3}}{\\dfrac{1}{2}}=\\dfrac{2}{3}$\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
