--- a/Python for AI/WhitePapers.ipynb
+++ b/Python for AI/WhitePapers.ipynb
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Matriz y vector**"
+    "#### Matriz y vector"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Matriz y matriz de dimensiones válidas**"
+    "#### Matriz y matriz de dimensiones válidas"
    ]
   },
   {
@@ -790,20 +790,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
-   "name": "python385jvsc74a57bd05638214bed11d7e11a3bfbe061b56f3402c3883ec48123d3dea06d44b441dcac"
+   "display_name": "Python 3.8.8 64-bit ('py8.8env': conda)",
+   "name": "python388jvsc74a57bd0872ef5f367a824e2a9f29f9c70026d6dc7e7210644532417612a85a25d586e43"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": ""
   },
   "metadata": {
    "interpreter": {
