--- a/Datasets_Analysis/car_insurance_en.ipynb
+++ b/Datasets_Analysis/car_insurance_en.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis: seguro de vehículos\n"
+    "# Vehicle Insurance Predictive Analysis\n"
    ]
   },
   {
@@ -1614,7 +1614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_pred = rfc_model.predict(test_final) # Predictions over test set"
+    "final_pred = logmodel.predict(test_final) # Predictions over test set"
    ]
   },
   {
