eng analysis car insurance complete

--- a/Datasets_Analysis/car_insurance.ipynb
+++ b/Datasets_Analysis/car_insurance.ipynb
@@ -28,7 +28,7 @@
     "| Vehicle_Age | Años del vehículo |\n",
     "| Vehicle_Damage | El cliente ha sufrido daños en su vehículo anteriormente (1/0) |\n",
     "| Annual_Premium | Cantidad a pagar por el nuevo seguro |\n",
-    "| Plocy_Sales_Channel | Canal por el que se localiza al cliente (e-mail, teléfono, en persona, etc) |\n",
+    "| Policy_Sales_Channel | Canal por el que se localiza al cliente (e-mail, teléfono, en persona, etc) |\n",
     "| Vintage | Número de días del cliente con la compañía |\n",
     "| Response | Variables dependiente: Respuesta si o no (1/0) |\n",
     "\n",
