sales prediction init

--- a/Datasets_Analysis/car_insurance.ipynb
+++ b/Datasets_Analysis/car_insurance.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis: seguro de vehículos\n"
+    "# <center> Análisis: seguro de vehículos <center>\n",
+    "---\n"
    ]
   },
   {
@@ -13,7 +14,7 @@
    "source": [
     "Una empresa de seguros de salud quiere ofrecer a sus antiguos clientes un nuevo seguro de vehículos. Necesita nuestro servicio para crear un modelo que prediga si un cliente estaría interesado en este nuevo seguro.\n",
     "\n",
-    "La empresa nos ha ofrecido un dataset con antiguos clientes y sus respuestas a la oferta para que podamos crear un modelo de machine learning. Así mismo, nos piden que analicemos y devolvamos la posible respuesto de otro dataset con clientes nuevos en base al modelo creado.\n",
+    "La empresa nos ha proporcionado un dataset con antiguos clientes y sus correspondientes respuestas a la oferta realizada por la aseguradora. Gracias a este dataset nosotros podremos crear un modelo de machine learning que prediga las respuestas de los clientes. Así mismo, la aseguradora nos piden que analicemos y devolvamos en base a nuestro modelo de machine learning la posible respuesta de futuros clientes cuyos datos se encuentren en otro dataset.\n",
     "\n",
     "Los datasets estan divididos en las siguientes variables:\n",
     "\n",
