--- a/Datasets_Analysis/car_insurance_en.ipynb
+++ b/Datasets_Analysis/car_insurance_en.ipynb
@@ -1627,7 +1627,8 @@
    "outputs": [],
    "source": [
     "test_final = pd.read_csv('../res/test_final.csv')\n",
-    "test_final['Response'] = final_pred"
+    "test_final['Response'] = final_pred\n",
+    "test_final.drop(test_final.columns.difference(['id','Response']), 1, inplace=True)"
    ]
   },
   {
