--- a/Datasets_Analysis/titanic_survivors.ipynb
+++ b/Datasets_Analysis/titanic_survivors.ipynb
@@ -4438,11 +4438,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 827,
+   "execution_count": 828,
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv('../res/titanic/submission_titanic.csv')"
+    "submission.to_csv('../res/titanic/submission_titanic.csv', index=False)"
    ]
   }
  ],
