--- a/Datasets_Analysis/titanic_survivors.ipynb
+++ b/Datasets_Analysis/titanic_survivors.ipynb
@@ -15,6 +15,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
