--- a/Supervised/Actividad_Portfolio_Gonzalo_ZabalaGarcia.ipynb
+++ b/Supervised/Actividad_Portfolio_Gonzalo_ZabalaGarcia.ipynb
@@ -37,13 +37,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m7JNQDEIzlX5"
+      },
+      "source": [
+        "#### Imports y funciones para guardar imágenes en Drive"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ftWlU6jahkF5",
-        "outputId": "d5f1666e-f420-4518-9eff-7c0de0b36946"
+        "outputId": "7769bae0-a7ee-4a43-b07a-df228dff5900"
       },
       "source": [
         "from google.colab import drive\n",
@@ -52,7 +61,7 @@
         "import cv2 as cv\n",
         "import os"
       ],
-      "execution_count": 22,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +82,7 @@
         "def savefile(img, path, filename):\n",
         "  cv.imwrite(os.path.join(path , filename), img)"
       ],
-      "execution_count": 23,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -95,10 +104,14 @@
         "from skimage import io\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "histo_1 = io.imread('/content/drive/MyDrive/Master IA/Aprendizaje Supervisado/histo_1.jpeg')\n",
-        "histo_2 = io.imread('/content/drive/MyDrive/Master IA/Aprendizaje Supervisado/histo_2.jpeg')\n",
-        "\n",
         "#### ELEGIR IMAGEN SOBRE LA QUE REALIZAR EL PROCESADO ###\n",
+        "\n",
+        "histo_1 = io.imread('histo_1.jpeg', 0) \n",
+        "histo_2 = io.imread('histo_2.jpeg', 0) \n",
+        "\n",
+        "#histo_1 = io.imread('/content/drive/MyDrive/Master IA/Aprendizaje Supervisado/histo_1.jpeg')\n",
+        "#histo_2 = io.imread('/content/drive/MyDrive/Master IA/Aprendizaje Supervisado/histo_2.jpeg')\n",
+        "\n",
         "histo_x = histo_1\n",
         "histo_file = 'histo1'\n",
         "\n",
@@ -106,7 +119,7 @@
         "dir = '/content/drive/MyDrive/Master IA/Aprendizaje Supervisado/' + histo_file\n",
         "os.makedirs(dir, exist_ok=True)"
       ],
-      "execution_count": 24,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -117,7 +130,7 @@
           "height": 286
         },
         "id": "GK3BBUw1MSqP",
-        "outputId": "8d91ff17-912d-4360-a199-d34280953fca"
+        "outputId": "bc5c0f12-6a47-4851-83fa-cc06e9404ad6"
       },
       "source": [
         "# Recuerda normalizar la imagen diviéndola entre 255\n",
@@ -125,7 +138,7 @@
         "plt.imshow(histo_x, cmap='gray')\n",
         "plt.show"
       ],
-      "execution_count": 25,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -137,7 +150,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 48
         },
         {
           "output_type": "display_data",
@@ -171,7 +184,7 @@
           "height": 269
         },
         "id": "qgokVkvhMSqQ",
-        "outputId": "5a041ddf-e94e-46e1-9058-a544efa15721"
+        "outputId": "72629e51-f5b1-492b-a8c2-18653c57a1a8"
       },
       "source": [
         "# 1) Extrae la componente magenta de la imagen (que corresponde a la región tisular)\n",
@@ -185,7 +198,7 @@
         "# 3) Guarda la imagen Magenta con cv2.imwrite con el nombre \"1_imagen_magenta.png\"\n",
         "savefile((m*255).astype('uint8'), dir, '1_imagen_magenta.png')"
       ],
-      "execution_count": 26,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "display_data",
@@ -219,7 +232,7 @@
           "height": 269
         },
         "id": "HiwtJtKyMSqR",
-        "outputId": "d8107e8b-f839-493b-9f95-e0e203b6e08d"
+        "outputId": "71a90251-3d6e-48fe-a453-e8ba5b07cb09"
       },
       "source": [
         "# 1) Convierte la imagen Magenta a formato \"uint8\"\n",
@@ -239,7 +252,7 @@
         "mask = mask * 255\n",
         "savefile(mask, dir, '2_mascara_con_artefactos.png')"
       ],
-      "execution_count": 27,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
@@ -273,7 +286,7 @@
           "height": 269
         },
         "id": "8oYzBGDFMSqS",
-        "outputId": "6e09ecc0-2cbe-452a-9e03-d6493e3f92c2"
+        "outputId": "70ef1444-c708-409c-9ac8-e4510f3934aa"
       },
       "source": [
         "# 1) Utiliza la librería skimage.morphology.remove_small_objects. \n",
@@ -293,7 +306,7 @@
         "removed = removed * 255\n",
         "savefile(removed, dir, '3_mascara_sin_artefactos.png')"
       ],
-      "execution_count": 28,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
@@ -327,7 +340,7 @@
           "height": 269
         },
         "id": "yov-zL633dmT",
-        "outputId": "e5acab60-ccd8-4a6c-e58d-3f80662b08d1"
+        "outputId": "dc849643-5efa-442c-ea2e-8899b81ec790"
       },
       "source": [
         "# 1) Aplica el algoritmo de expansión a partir de semillas para rellenar con 0s\n",
@@ -362,7 +375,7 @@
         "# 3) Guarda la máscara multiplicándola por 255 con el nombre \"4_mascara_lumenes.png\"\n",
         "savefile(canny, dir, '4_mascara_lumenes.png')"
       ],
-      "execution_count": 29,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "display_data",
@@ -396,7 +409,7 @@
           "height": 269
         },
         "id": "vQC3ozDPMSqT",
-        "outputId": "7da56117-ca4c-48a2-b5cf-f83d0b82ef2d"
+        "outputId": "6dc80400-d227-423d-c91d-5dec8c133948"
       },
       "source": [
         "# 1) Rellena los lúmenes con la función binary_fill_holes de la librería scipy.ndimage.morphology\n",
@@ -415,7 +428,7 @@
         "bin_fill = bin_fill * 255\n",
         "savefile(bin_fill, dir, '5_mascara_final.png')"
       ],
-      "execution_count": 30,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "display_data",
@@ -449,7 +462,7 @@
           "height": 269
         },
         "id": "d4m3cm7gMSqU",
-        "outputId": "f75562bd-b134-452b-aedc-9b0f9365b09a"
+        "outputId": "3e32ffbe-c1e8-4af3-ae77-8ce2a21ae1c3"
       },
       "source": [
         "# 1) Encuentra los contornos de los lúmenes\n",
@@ -469,7 +482,7 @@
         "# 4) Guarda la imagen multiplicándola por 255 con el nombre \"6_imagen_superpuesta.png\"\n",
         "savefile(rgb_contour, dir, '6_imagen_superpuesta.png')"
       ],
-      "execution_count": 31,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "display_data",
@@ -503,7 +516,7 @@
           "height": 626
         },
         "id": "7T5raz3hMSqU",
-        "outputId": "6fb6cbc2-449c-4351-8292-694d1362b4a8"
+        "outputId": "c86885dc-46a1-443d-8178-96727e3d8e51"
       },
       "source": [
         "# 1) Convierte la máscara de lúmenes en una imagen de etiquetas utilizando la librería skimage.measure\n",
@@ -540,7 +553,7 @@
         "crop = crop*255\n",
         "savefile(crop, dir, '7_crop_image.png')"
       ],
-      "execution_count": 32,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +613,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oBp2xS0UMSqV",
-        "outputId": "17749152-177e-415d-8343-d000f906598d"
+        "outputId": "bee72c0a-0355-4e28-d352-7d420d63abc5"
       },
       "source": [
         "# Calcula las siguientes características del crop del lumen anterior, redondeando su valor hasta el cuarto decimal.\n",
@@ -652,7 +665,7 @@
         "\n",
         "print(tabulate(my_data, headers=headers))"
       ],
-      "execution_count": 33,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
